tests/ui/untrusted_pairs.stderr
error[E0271]: expected `std::slice::Iter<'_, ({integer}, {integer})>` to be an iterator that yields `RangeInclusive<_>`, but it yields `&({integer}, {integer})`
 --> tests/ui/untrusted_pairs.rs:8:41
  |
8 |     let range_set_int: RangeSetInt<_> = untrusted.iter().into();
  |                                         ^^^^^^^^^^^^^^^^ ---- required by a bound introduced by this call
  |                                         |
  |                                         expected struct `RangeInclusive`, found reference
  |
  = note: expected struct `RangeInclusive<_>`
          found reference `&({integer}, {integer})`
  = note: required for `RangeSetInt<_>` to implement `From<std::slice::Iter<'_, ({integer}, {integer})>>`
  = note: required for `std::slice::Iter<'_, ({integer}, {integer})>` to implement `Into<RangeSetInt<_>>`

error[E0277]: the trait bound `std::slice::Iter<'_, ({integer}, {integer})>: SortedDisjoint` is not satisfied
 --> tests/ui/untrusted_pairs.rs:8:41
  |
8 |     let range_set_int: RangeSetInt<_> = untrusted.iter().into();
  |                                         ^^^^^^^^^^^^^^^^ ---- required by a bound introduced by this call
  |                                         |
  |                                         the trait `SortedDisjoint` is not implemented for `std::slice::Iter<'_, ({integer}, {integer})>`
  |
  = help: the following other types implement trait `SortedDisjoint`:
            DynSortedDisjoint<'a, T>
            NotIter<T, I>
            Ranges<'_, T>
            SortedDisjointIter<T, I>
            itertools::tee::Tee<I>
  = note: required for `RangeSetInt<_>` to implement `From<std::slice::Iter<'_, ({integer}, {integer})>>`
  = note: required for `std::slice::Iter<'_, ({integer}, {integer})>` to implement `Into<RangeSetInt<_>>`
